Fix switch alignment on discover page

--- a/site/gatsby-site/src/tailwind.css
+++ b/site/gatsby-site/src/tailwind.css
@@ -272,7 +272,7 @@
     }
 
     .tw-switch {
-        @apply tw-cursor-pointer;
+        @apply tw-cursor-pointer tw-mb-2;
     }
 
     .tw-switch>* {
